--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Liu Mengxiao"
+title                    : "Mengxiao Liu"
 title_separator          : "-"
-name                     : &name "Liu Mengxiao"
+name                     : &name "Mengxiao Liu"
 description              : &description "Postgraduate in Cyberspace Security Lab, Shanghai University."
 url                      : https://lmx.csshu.org # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Liu Mengxiao"
+  name             : "Mengxiao Liu"
   avatar           : "profile.png"
   bio              : "Postgraduate in Cyberspace Security Lab, Shanghai University."
   location         : "No.333 Nanchen Road, <br/>Baoshan, Shanghai"
@@ -103,7 +103,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : 
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
